<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="#8D8B8B"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@color/colorText" />

            <TextureView
                android:id="@+id/local_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_toStartOf="@id/view"
                android:layout_toLeftOf="@id/view" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_toStartOf="@id/view"
                android:layout_toLeftOf="@id/view"
                android:gravity="center"
                android:text="@string/visit"
                android:textColor="@color/colorHit"
                android:textSize="20sp" />


            <ImageButton
                android:id="@+id/ib_local_mic"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="7dp"
                android:layout_toStartOf="@id/view"
                android:layout_toLeftOf="@id/view"
                android:background="@drawable/ic_bottom_microphone_on"
                android:onClick="enableLocalMic" />

            <TextureView
                android:id="@+id/remote_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:layout_toEndOf="@id/view"
                android:layout_toRightOf="@id/view" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_toEndOf="@id/view"
                android:layout_toRightOf="@id/view"
                android:gravity="center"
                android:text="@string/master"
                android:textColor="@color/colorHit"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/ib_remote_mic"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/ic_bottom_microphone_off"
                android:onClick="enableRemoteMic" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editHid"
                style="@style/EditTextStyle"
                android:layout_weight="1"
                android:autofillHints="@string/hid_hints"
                android:hint="@string/hid_hints"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/colorNotice" />

            <Button
                android:id="@+id/videoStart"
                style="@style/ButtonStyle"
                android:layout_marginEnd="30dp"
                android:layout_weight="1.8"
                android:text="@string/video_start"
                android:visibility="visible" />

            <Button
                android:id="@+id/videoEnd"
                style="@style/ButtonStyle"
                android:layout_marginEnd="30dp"
                android:layout_weight="1.8"
                android:text="@string/video_end"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
